@@ -10,6 +10,7 @@
 
 == Bug
 * [OC-414] Issue with using user data in templates
+* [OC-857] Users - PUT /groups/{id}/users doesn't delete former group members
 
 == Task
 * [OC-844] Add a UI style for day and a UI style for night with a button to permut. This fonctionnality is optionnal and can be activate/desactivate via configuration https://opfab.github.io/documentation/current/deployment/#_web_ui
